FIX: overflow issues on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -60,6 +60,7 @@ html {
 	width: 100%;
 	z-index: 1;
 	min-height: 100vh - $header-height;
+	overflow-x: hidden;
 }
 
 main {
